added js funcionality to courses

--- a/packs.html
+++ b/packs.html
@@ -327,14 +327,14 @@
           <h2 id="beg-course" class="title-course">BEGGINER COURSE</h2>
         </div>
         <div class="saved-course">
-          <p class="line-through">200€</p>
+          <p id="price-before-beg" class="line-through">200€</p>
           <p>
-            <span class="saved-div">Ahorra 25%</span>
+            <span class="saved-div">Ahorra 10%</span>
           </p>
         </div>
 
         <div class="price-course">
-          <h3 class="euros-course">150</h3>
+          <h3 id="beg-price"class="euros-course">150</h3>
           <span class="logo-act"><i class="fas fa-euro-sign"></i></span>
         </div>
         <div class="button-course">
@@ -376,14 +376,14 @@
           <h2 id="mid-course" class="title-course">INTERMEDIUM COURSE</h2>
         </div>
         <div class="saved-course">
-          <p class="line-through">400€</p>
+          <p  id="price-before-int" class="line-through">400€</p>
           <p>
-            <span class="saved-div">Ahorra 25%</span>
+            <span class="saved-div">Ahorra 15%</span>
           </p>
         </div>
 
         <div class="price-course">
-          <h3 class="euros-course">350</h3>
+          <h3 id="int-price"class="euros-course">350</h3>
           <span class="logo-act"><i class="fas fa-euro-sign"></i></span>
         </div>
         <div class="button-course">
@@ -431,14 +431,14 @@
           <h2  id="adv-course" class="title-course">ADVANCED COURSE</h2>
         </div>
         <div class="saved-course">
-          <p class="line-through">500€</p>
+          <p id="price-before-adv" class="line-through">500€</p>
           <p>
-            <span class="saved-div">Ahorra 25%</span>
+            <span class="saved-div">Ahorra 20%</span>
           </p>
         </div>
 
         <div class="price-course">
-          <h3 class="euros-course">400</h3>
+          <h3 id="adv-price" class="euros-course">400</h3>
           <span class="logo-act"><i class="fas fa-euro-sign"></i></span>
         </div>
         <div class="button-course">
