--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,11 @@
           <span></span>
           <span></span>
           <ul id="menu">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Info</a></li>
-              <li><a href="#">Contact</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="boxPark.html">BOXPARK</a></li>
+            <li><a href="packs.html">SERVICES</a></li>
+            <li><a href="about.html">ABOUT US</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
           </ul>
      </div>
     </nav>
