--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, user-scalable=no"/>
     <title>BOXMad</title>
-    <link rel="icon" type= "image/x-icon" href="img/logoblack.png"/>
+    <link rel="icon" type= "image/x-icon" href="img/logoico.ico"/>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +16,7 @@
     <link href="css/footer.css" rel="stylesheet" type="text/css" />
     <link href="css/responsive.css" rel="stylesheet" type="text/css" />
     <link href="css/components.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
     <!--Estos es para los iconos de los socials-->
@@ -43,10 +43,11 @@
                 <span></span>
                 <span></span>
                 <ul id="menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Info</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="boxPark.html">BOXPARK</a></li>
+                    <li><a href="packs.html">SERVICES</a></li>
+                    <li><a href="about.html">ABOUT US</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
            </div>
         </nav>
