changed vh home and css styles

--- a/packs.html
+++ b/packs.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header class="header-nav">
-      <div clas="nav-logo">
+      <div class="nav-logo">
         <img class="img-nav" src="img/logo-transparent.png" />
       </div>
       <nav class="nav">
