--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   <body>
       <!-- Manu -->
       <header class="header-nav">
-        <div clas="nav-logo"><img class="img-nav" src="img/logo-transparent.png"></div>
+        <div class="nav-logo"><img class="img-nav" src="img/logo-transparent.png"></div>
         <nav class="nav">
             <a href="index.html" class="btn-nav">HOME</a>
             <a href="boxPark.html" class="btn-nav">BOXPARK</a>
