--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>BOXMad</title>
     <link rel="icon" type= "image/x-icon" href="img/logoico.ico"/>
     <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
@@ -26,7 +30,7 @@
   <body>
       <!-- Manu -->
         <header class="header-nav">
-            <div clas="nav-logo"><img class="img-nav" src="img/logo-transparent.png"></div>
+            <div class="nav-logo"><img class="img-nav" src="img/logo-transparent.png"></div>
             <nav class="nav">
                 <a href="index.html" class="btn-nav">HOME</a>
                 <a href="boxPark.html" class="btn-nav">BOXPARK</a>
@@ -56,7 +60,7 @@
 
         <div class="header-container-index">
             <div class="header-index-img">
-                <a id="title-header" href="boxPark.html"><div class="header-text-container">
+                <a id="title-header" href="boxPark.html"><div class="header-text-container animate__animated animate__zoomInDown animate__slow">
                     <h1 class="h1-main">COMIENZA LA AVENTURA</h1>
                 </div></a>
             </div>
