finished responsive and designs home and pack.html

--- a/boxPark.html
+++ b/boxPark.html
@@ -10,7 +10,7 @@
     <link href="css/components.css" rel="stylesheet" type="text/css" />
     <link href="css/responsive.css" rel="stylesheet" type="text/css" />
 
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" type= "image/x-icon" href="img/logoico.ico"/>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -22,7 +22,7 @@
   <body>
     <!-- Manu -->
     <header class="header-nav">
-      <div clas="nav-logo">
+      <div class="nav-logo">
         <img class="img-nav" src="img/logo-transparent.png" />
       </div>
       <nav class="nav">
