--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <div class="header-container-index">
             <div class="header-index-img">
-                <a id="title-header" href="boxPark.html"><div class="header-text-container animate__animated animate__zoomInDown animate__slow">
+                <a class="title-header" href="packs.html"><div class="header-text-container animate__animated animate__zoomInDown animate__slow">
                     <h1 class="h1-main">COMIENZA LA AVENTURA</h1>
                 </div></a>
             </div>
