--- a/packs.html
+++ b/packs.html
@@ -51,8 +51,8 @@
     <!-- SERGIO -->
     <div class="header-container-pack">
       <div id="header-pack-img">
-        <div class="header-text-container">
-          <a id="title-header" href="boxPark.html"
+        <div class="header-text-container"  id="title-services-container">
+          <a id="title-header" id="title-services" href="packs.html"
             ><h1>DESCUBRE NUESTROS CURSOS Y ACTIVIDADES</h1></a
           >
         </div>
@@ -92,13 +92,16 @@
               <li class="list-group-item">
                 <i class="fas fa-hourglass-half icon-cards"></i>Duration: 1h
               </li>
+              <hr>
               <li class="list-group-item">
                 <i class="fas fa-euro-sign icon-cards"></i>Price: 20€
               </li>
+              <hr>
             </ul>
             <div class="container justify-content-center">
               <a href="contact.html" class="btn btn-primary">Book</a>
             </div>
+            <hr>
             <div class="youtube-container">
               <div class="youtube">
                 <a href="https://www.youtube.com/watch?v=x29s4SC6mvA"
@@ -127,13 +130,16 @@
               <li class="list-group-item">
                 <i class="fas fa-hourglass-half icon-cards"></i>Duration: 1h
               </li>
+              <hr>
               <li class="list-group-item">
                 <i class="fas fa-euro-sign icon-cards"></i>Price: 20€
               </li>
+              <hr>
             </ul>
             <div class="container justify-content-center">
               <a href="contact.html" class="btn btn-primary">Book</a>
             </div>
+            <hr>
             <div class="youtube-container">
               <div class="youtube">
                 <a href="https://www.youtube.com/watch?v=cGB77v4nEHo"
@@ -155,20 +161,23 @@
           <div class="card-block">
             <h4 class="card-title p-2 bold">Karting</h4>
             <p class="card-text textp p-2 border-bottom border-dark">
-              We have more than 2km of track with a limit of up to 10 participants
+              We have more than 2km of track with a limit of up to 10 participants. Come to drive!
             </p>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
                 <i class="fas fa-hourglass-half icon-cards"></i>Duration: Full
                 day
               </li>
+              <hr>
               <li class="list-group-item">
                 <i class="fas fa-euro-sign icon-cards"></i>Price: 25€
               </li>
             </ul>
+            <hr>
             <div class="container justify-content-center">
               <a href="contact.html" class="btn btn-primary">Book</a>
             </div>
+            <hr>
             <div class="youtube-container">
               <div class="youtube">
                 <a href="https://www.youtube.com/watch?v=bVsXVqHbX3o"
@@ -197,13 +206,16 @@
                 <i class="fas fa-hourglass-half icon-cards"></i>Duration: Full
                 day
               </li>
+              <hr>
               <li class="list-group-item">
                 <i class="fas fa-euro-sign icon-cards"></i>Price: 25€
               </li>
+              <hr>
             </ul>
             <div class="container justify-content-center">
               <a href="contact.html" class="btn btn-primary">Book</a>
             </div>
+            <hr>
             <div class="youtube-container">
               <div class="youtube">
                 <a href="https://www.youtube.com/watch?v=aEoDmGvqY0M"
@@ -226,21 +238,23 @@
           <div class="card-block">
             <h4 class="card-title p-2 bold">Skate</h4>
             <p class="card-text textp p-2 border-bottom border-dark">
-              Enjoy of our skate park. One of the biggest spanish skateparks.
-              Come to try!
+              Enjoy of our skate park. One of the biggest spanish skateparks with a great varity of pools where you could learn new tricks
             </p>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
                 <i class="fas fa-hourglass-half icon-cards"></i>Duration: Full
                 day
               </li>
+              <hr>
               <li class="list-group-item">
                 <i class="fas fa-euro-sign icon-cards"></i>Price: 25€
               </li>
+              <hr>
             </ul>
             <div class="container justify-content-center">
               <a href="contact.html" class="btn btn-primary">Book</a>
             </div>
+            <hr>
             <div class="youtube-container">
               <div class="youtube">
                 <a href="https://www.youtube.com/watch?v=I8u16mZqDMQ"
@@ -248,7 +262,7 @@
                 ></a>
 
                 <p class="youtube-icon-description">
-                  Check our climbing center
+                  Check our skatepark
                 </p>
               </div>
             </div>
@@ -274,14 +288,17 @@
                 <i class="fas fa-hourglass-half icon-cards"></i>Duration: Full
                 day
               </li>
+              <hr>
 
               <li class="list-group-item">
                 <i class="fas fa-euro-sign icon-cards"></i>Price: 18€
               </li>
+              <hr>
             </ul>
             <div class="container justify-content-center">
               <a href="contact.html" class="btn btn-primary">Book</a>
             </div>
+            <hr>
             <div class="youtube-container">
               <div class="youtube">
                 <a href="https://www.youtube.com/watch?v=uxmSgKP3GJ4"
@@ -505,10 +522,9 @@
           </div></a
         >
         <div class="property-description">
-          <h5 class="h5-pack-card">Sky diving for three people</h5>
+          <h5 class="h5-pack-card">Sky diving</h5>
           <p class="p-pack-card">
-            Lorem Ipsum Dipsum hortata. Mixcall Horcho. Mixwell Chingo. More
-            Bingo. Lorem Ipum doth be hard.
+            Enjoy an unforgettable experience. This pack offers parachute jumping plus theoretical classes offered by our partner Airspeeders. Book with us to get a 9% discount
           </p>
         </div>
       </div>
@@ -521,10 +537,9 @@
           </div></a
         >
         <div class="property-description">
-          <h5 class="h5-pack-card">Airsoft for big groups of people</h5>
+          <h5 class="h5-pack-card">Paintball + BBQ</h5>
           <p class="p-pack-card">
-            Lorem Ipsum Dipsum hortata. Mixcall Horcho. Mixwell Chingo. More
-            Bingo. Lorem Ipum doth be hard.
+            Come with your group of friends and enjoy our pintball field. This pack includes 300 free balls and BBQ
           </p>
         </div>
       </div>
@@ -537,10 +552,9 @@
           </div></a
         >
         <div class="property-description">
-          <h5 class="h5-pack-card">Kayaking for couples</h5>
+          <h5 class="h5-pack-card">Canoe + hotel </h5>
           <p class="p-pack-card">
-            Lorem Ipsum Dipsum hortata. Mixcall Horcho. Mixwell Chingo. More
-            Bingo. Lorem Ipum doth be hard.
+            Book with us and enjoy the canoe descent of the Sella River. This pack includes a hotel night + breakfast
           </p>
         </div>
       </div>
@@ -553,10 +567,9 @@
           </div></a
         >
         <div class="property-description">
-          <h5 class="h5-pack-card">Bungee Jumping Birthday Present</h5>
+          <h5 class="h5-pack-card">Bungee Jumping</h5>
           <p class="p-pack-card">
-            Lorem Ipsum Dipsum hortata. Mixcall Horcho. Mixwell Chingo. More
-            Bingo. Lorem Ipum doth be hard.
+            Because it is your birthday, if you book with us, our partner High Jump will give you a bungee jump if you are accompanied by at least two other people.
           </p>
         </div>
       </div>
@@ -569,10 +582,9 @@
           </div></a
         >
         <div class="property-description">
-          <h5 class="h5-pack-card">Karts half day pack</h5>
+          <h5 class="h5-pack-card">Karts + BBQ </h5>
           <p class="p-pack-card">
-            Lorem Ipsum Dipsum hortata. Mixcall Horcho. Mixwell Chingo. More
-            Bingo. Lorem Ipum doth be hard.
+            Come spend a day with your friends at our Kart track. This pack includes 2h of karts plus barbecue. A minimum of 10 person is required.
           </p>
         </div>
       </div>
@@ -587,8 +599,7 @@
         <div class="property-description">
           <h5 class="h5-pack-card">Trekking Weekend</h5>
           <p class="p-pack-card">
-            Lorem Ipsum Dipsum hortata. Mixcall Horcho. Mixwell Chingo. More
-            Bingo. Lorem Ipum doth be hard.
+            Enjoy a weekend in contact with nature. This pack includes a trekking route through the entire Sierra de Navacerrada with the help of our partner Trekking Paths. Get a 10% discount by booking with us
           </p>
         </div>
       </div>
@@ -601,10 +612,9 @@
           </div></a
         >
         <div class="property-description">
-          <h5 class="h5-pack-card">Outdoor climbing for begginers</h5>
+          <h5 class="h5-pack-card">Outdoor climbing</h5>
           <p class="p-pack-card">
-            Lorem Ipsum Dipsum hortata. Mixcall Horcho. Mixwell Chingo. More
-            Bingo. Lorem Ipum doth be hard.
+            Come with your friends and learn outdoor climbing with us under the supervision of our staff. This activity is aimed at beginners. Includes material and transportation. Contact with us for further information
           </p>
         </div>
       </div>
@@ -617,10 +627,9 @@
           </div></a
         >
         <div class="property-description">
-          <h5 class="h5-pack-card">Skiing + 3 days hotel</h5>
+          <h5 class="h5-pack-card">Skiing + hotel</h5>
           <p class="p-pack-card">
-            Lorem Ipsum Dipsum hortata. Mixcall Horcho. Mixwell Chingo. More
-            Bingo. Lorem Ipum doth be hard.
+            This pack includes a 2-day ski pass plus a hotel night for two people in Sierra Nevada. Contact us for more information
           </p>
         </div>
       </div>
