--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <link href="css/about.css" rel="stylesheet" type="text/css" />
     <link href="css/components.css" rel="stylesheet" type="text/css" />
     <link href="css/responsive.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" type= "image/x-icon" href="img/logoico.ico"/>
 
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
