--- a/boxPark.html
+++ b/boxPark.html
@@ -157,17 +157,23 @@
       <div class="strip-container-small">
         <div class="small-container-logos">
           <div class="logo-article-body">
-            <div class="logo-article-logo">
-              <i
-                class="fa fa-cutlery"
-                aria-hidden=""
-                id="logo-logo-section"
-              ></i>
+            <div class="logo-article-logo"></div>
+            <div class="logo-article-text">
+              <p>Let us handle the faff, you enjoy the food</p>
             </div>
-            <div class="logo-article-text"></div>
           </div>
-          <div class="logo-article-body"></div>
-          <div class="logo-article-body"></div>
+          <div class="logo-article-body">
+            <div class="logo-article-logo"></div>
+            <div class="logo-article-text">
+              <p>Let us handle the faff, you enjoy the food</p>
+            </div>
+          </div>          
+          <div class="logo-article-body">
+            <div class="logo-article-logo"></div>
+            <div class="logo-article-text">
+              <p>Let us handle the faff, you enjoy the food</p>
+            </div>
+          </div>        
         </div>
         <div class="small-container-button">
           <button id="strip-button">TRY US NOW</button>
@@ -254,35 +260,6 @@
     </div>
     <div id="overlay"></div>
 
-    <!--Articles container boxpark
-    <div class="articles-container">
-        <div class="article">
-            <img class="article-img-top" data-src="holder.js/100px200/" alt="100%x200" src="img/bar2.jpg" 
-            data-holder-rendered="true" style="height: 200px; width: 100%; display: block;">
-            <div class="article-body">
-                <h3 class="article-title">Eat</h3>
-                <p class="article-text">Each BOXPARK venue offers an impressive selection of street food options from all over the world. With an assortment of small, independent street food traders and some of London's favourite restaurants, BOXPARK explores a range of global cuisines and guarantees to transport your taste buds.</p>
-            </div>
-        </div>
-        <div class="article">
-            <img class="article-img-top" data-src="holder.js/100px200/" alt="100%x200" src="img/bar3.jpg" 
-            data-holder-rendered="true" style="height: 200px; width: 100%; display: block;">
-            <div class="article-body">
-                <h3 class="article-title">Drink</h3>
-                <p class="article-text">With its buzzing atmosphere, BOXPARK is the perfect spot to enjoy food and drink under one roof along with live music, entertainment or socialising with friends. Each venue boasts 3 – 4 bars both inside and on the terrace areas, including the popular BeatBox Bar serving craft beers, wines and spirits</p>
-            </div>
-        </div>
-        <div class="article">
-            <img class="article-img-top" data-src="holder.js/100px200/" alt="100%x200" src="img/balls.jpg" 
-            data-holder-rendered="true" style="height: 200px; width: 100%; display: block;">
-            <div class="article-body">
-                <h3 class="article-title">Play</h3>
-                <p class="article-text">To make your visit to BOXPARK even better, each venue has its own year-round schedule of entertainment and a weekly community-led programme of events. BOXPARK Wembley has created its own leisure experience with a dedicated space for fun activities such as axe throwing, virtual reality experience, and a ‘PlayBox’ area which is home to shuffleboard, table tennis, pool and table football.</p>
-            </div>
-        </div>
-    </div>
-</div>
--->
 
     <!--footer -->
 
