changes to the contact form

--- a/contact.html
+++ b/contact.html
@@ -49,66 +49,67 @@
   </nav>
   <!--container-->
     <div class="form-box" id="form">
-      <div class="row">
-        <h2>Nosotros estamos felices de oirle</h2>
+      <div class="rows">
+        <h2>We're happy to hear from you</h2>
       </div>
 
       <!-- formulary -->
 
-      <div class="row">
+      <div class="rows">
         <form class="contact-form">
-          <div class="row">
+          <div class="rows">
             <div class="col span-1">
-              <label for="name">Nombre</label>
+              <label for="name">Name</label>
             </div>
             <div class="col span-2">
-              <input type="text" name="name" id="name" placeholder="Tu nombre" required />
+              <input type="text" name="name" id="name" placeholder="Your name" required />
             </div>
           </div>
-          <div class="row">
+          <div class="rows">
             <div class="col span-1">
               <label for="email">Email</label>
             </div>
             <div class="col span-2">
-              <input type="email" name="email" id="email" placeholder="Tu email" required />
+              <input type="email" name="email" id="email" placeholder="Your email" required />
             </div>
           </div>
-          <div class="row">
+          <div class="rows">
             <div class="col span-1">
-              <label for="find-us">¿Como nos encontraste?</label>
+              <label for="find-us">Information about?</label>
             </div>
             <div class="col span-2">
               <select name="find-us" id="find-us">
-                <option value="friends" selected>Amigos</option>
-                <option value="search">Buscador</option>
-                <option value="ad">Anuncio publicitario</option>
-                <option value="other">Otros</option>
+                <option value="friends" selected>--Choose the information--</option>
+                <option value="search">Activities</option>
+                <option value="ad">Courses</option>
+                <option value="other">Lunches</option>
+                <option value="other">Packs</option>
+                <option value="other">Quiz</option>
               </select>
             </div>
           </div>
-          <div class="row">
+          <div class="rows">
             <div class="col span-1">
-              <label for="news">¿Boletin informativo?</label>
+              <label for="news">Newsletter?</label>
             </div>
             <div class="col span-2">
-              <input type="checkbox" name="news" id="news" checked /> Si Por
-              favor
+              <input type="checkbox" name="news" id="news" checked /> Yes, please
             </div>
           </div>
-          <div class="row">
+          <div class="rows">
             <div class="col span-1">
-              <label>Escríbanos</label>
+              <label>Drop us a line</label>
             </div>
             <div class="col span-2">
-              <textarea name="message" placeholder="Tu mensaje"></textarea>
+              <textarea name="message" placeholder="Your message"></textarea>
             </div>
           </div>
-          <div class="row">
+          <div class="rows">
             <div class="col span-1">
               <label>&nbsp;</label>
             </div>
             <div class="col span-2">
-              <input type="submit" value="Enviar" />
+              <input type="submit" value="Send it!" />
             </div>
           </div>
         </form>
