--- a/boxPark.html
+++ b/boxPark.html
@@ -157,19 +157,19 @@
       <div class="strip-container-small">
         <div class="small-container-logos">
           <div class="logo-article-body">
-            <div class="logo-article-logo"></div>
+            <div class="logo-article-logo " id="logo-strip1"></div>
             <div class="logo-article-text">
               <p>Let us handle the faff, you enjoy the food</p>
             </div>
           </div>
           <div class="logo-article-body">
-            <div class="logo-article-logo"></div>
+            <div class="logo-article-logo" id="logo-strip2"></div>
             <div class="logo-article-text">
               <p>Let us handle the faff, you enjoy the food</p>
             </div>
           </div>          
           <div class="logo-article-body">
-            <div class="logo-article-logo"></div>
+            <div class="logo-article-logo" id="logo-strip3"></div>
             <div class="logo-article-text">
               <p>Let us handle the faff, you enjoy the food</p>
             </div>
