unified buttons and design, responsive boxpark

--- a/boxPark.html
+++ b/boxPark.html
@@ -86,7 +86,7 @@
               </p>
             </div>
             <div class="article-first-button">
-              <button id="first-section-button">BUILD YOUR BOX</button>
+              <button id="first-section-button" class="btn-box">BUILD YOUR BOX</button>
             </div>
           </div>
           <div class="article-first">
@@ -105,7 +105,7 @@
               </p>
             </div>
             <div class="article-first-button">
-              <button id="first-section-button">BUILD YOUR BOX</button>
+              <button id="first-section-button" class="btn-box">BUILD YOUR BOX</button>
             </div>
           </div>
           <div class="article-first">
@@ -125,7 +125,7 @@
               </p>
             </div>
             <div class="article-first-button">
-              <button id="first-section-button">BUILD YOUR BOX</button>
+              <button id="first-section-button"class="btn-box">BUILD YOUR BOX</button>
             </div>
           </div>
         </div>
@@ -153,11 +153,11 @@
 
     <!--STRIP SECTION-->
 
-    <div class="strip-container">
+    <div class="strip-container" id="strip-logos-try-container">
       <div class="strip-container-small">
         <div class="small-container-logos">
           <div class="logo-article-body">
-            <div class="logo-article-logo " id="logo-strip1"></div>
+            <div class="logo-article-logo" id="logo-strip1"></div>
             <div class="logo-article-text">
               <p>Let us handle the faff, you enjoy the food</p>
             </div>
@@ -176,7 +176,7 @@
           </div>        
         </div>
         <div class="small-container-button">
-          <button id="strip-button">TRY US NOW</button>
+          <button  class="btn-box">TRY US NOW</button>
         </div>
       </div>
     </div>
