changes in the sources of h1, h2; increase the width of the form

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 
     <!--content-->
     <div class="wrap">
-      <h1>Sobre Nosotros</h1>
+      <h1 id="bunge-title">Sobre Nosotros</h1>
       <h2>Team Building High and Low Ropes</h2>
       <p class="parrafo underlined underlined--gradient">
         En BOXMad disponemos de las primeras y únicas instalaciones en Madrid y
