--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
   <!--container-->
     <div class="form-box" id="form">
       <div class="rows">
-        <h2>We're happy to hear from you</h2>
+        <h2 id = "bunge-title">We're happy to hear from you</h2>
       </div>
 
       <!-- formulary -->
@@ -79,12 +79,11 @@
             </div>
             <div class="col span-2">
               <select name="find-us" id="find-us">
-                <option value="friends" selected>--Choose the information--</option>
-                <option value="search">Activities</option>
-                <option value="ad">Courses</option>
-                <option value="other">Lunches</option>
-                <option value="other">Packs</option>
-                <option value="other">Quiz</option>
+                <option value="choose-info" selected>--Choose the information--</option>
+                <option value="Activities">Activities</option>
+                <option value="Courses">Courses</option>
+                <option value="Lunches">Lunches</option>
+                <option value="Packs">Packs</option>
               </select>
             </div>
           </div>
