changes in testimonials

--- a/boxPark.html
+++ b/boxPark.html
@@ -181,7 +181,7 @@
       </div>
     </div>
     <!--TESTIMONIAL SECTION-->
-    <div id="content-wrapper">
+    <div class="content-wrapper" id="testimonial-wrapper">
       <div class="container-box-img">
         <div class="box">
           <h2 class="heading-main"></h2>
