--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
         </div>
 
-        <div id="content-wrapper">
+        <div class="content-wrapper">
             <div class="container-box-img">
                 <div class="box">
                     <h2 class="heading-main">Nuestro Centro</h2>
