translate to English

--- a/contact.html
+++ b/contact.html
@@ -75,10 +75,10 @@
           </div>
           <div class="rows">
             <div class="col span-1">
-              <label for="find-us">Information about?</label>
+              <label for="info-int">Information of interest?</label>
             </div>
             <div class="col span-2">
-              <select name="find-us" id="find-us">
+              <select name="info-int" id="info-int">
                 <option value="choose-info" selected>--Choose the information--</option>
                 <option value="Activities">Activities</option>
                 <option value="Courses">Courses</option>
