--- a/footer.html
+++ b/footer.html
@@ -8,8 +8,8 @@
                 <h3 class="title-footer-section">Quick Links</h3>
             </div>
             <div class="footer-box">
-                <div class="right-article-item" id="footer-links"><a href="#"></a>Contact us</div>
-                <div class="right-article-item" id="footer-links"><a href="#"></a>Become a partner</div>
+                <div class="right-article-item" id="footer-links"><a href="contact.html" style="text-decoration: none;">Contact us</a></div>
+                <div class="right-article-item" id="footer-links"><a href="boxPark.html" style="text-decoration: none;">Discover Boxmad</a></div>
                 <div class="right-article-item" id="footer-links"><a href="#"></a>About us</div>
                 <div class="right-article-item" id="footer-links"><a href="#"></a>Events</div>
             </div>
@@ -51,7 +51,7 @@
 
         <div id="sponsors-section"  class="footer-section-wrapper">
             <div class="logo-sponsor-section">
-              <img src="img/logo-transparent.png" alt="#" id="logo-footer">  <!--Logo goes here-->
+              <a href="index.html"><img src="img/logo-transparent.png" alt="logo of boxmad" id="logo-footer"></a>  <!--Logo goes here-->
             </div>
             <div class="sponsors-wrapper-container">
                 <div class="title-section-wrapper">
@@ -59,13 +59,13 @@
                 </div>
                 <div class="sponsors-wrapper">
                     <div class="sponsor">
-                        <img src="img/madrid-logo.png" alt="" id="sponsor-1">
+                        <a href="https://www.madrid.es/portal/site/munimadrid" target="_blank"><img src="img/madrid-logo.png" alt="logo of madrid"  id="sponsor-1"></a>
                     </div>
                     <div class="sponsor">
-                        <img src="img/comunidad-logo.png" alt="" srcset="" id="sponsor-2">
+                        <a href="https://www.comunidad.madrid/" target="_blank"><img src="img/comunidad-logo.png" alt="logo of comunidad de madrid" id="sponsor-2"></a>
                     </div>
                     <div class="sponsor">
-                        <img src="img/aperol-logo.png" alt="" srcset="" id="sponsor-3">
+                        <a href="https://www.aperol.com/" target="_blank"><img src="img/aperol-logo.png" alt="logo of aperol"   id="sponsor-3"></a>
                     </div>
                 </div>
             </div>
@@ -80,7 +80,7 @@
               <p><span>All rights reserved</span></p>
           </div>
           <div class="footer-bottom-right">
-              <p>Made with<span aria-label="love" class="gamut-8vrj74-HeartContainer e199n3s10">️❤️</span> in Madrid &copy;Madbox 2021</p>
+              <p>Made with<span aria-label="love" class="gamut-8vrj74-HeartContainer e199n3s10">️❤️</span>in Madrid &copy;Boxmad 2021</p>
           </div>
       </div>
   </footer>
