--- a/boxPark.html
+++ b/boxPark.html
@@ -21,33 +21,34 @@
   </head>
   <body>
     <!-- Manu -->
-    <header class="header-nav">
-      <div class="nav-logo">
-        <img class="img-nav" src="img/logo-transparent.png" />
-      </div>
-      <nav class="nav">
-        <a href="index.html" class="btn-nav">HOME</a>
-        <a href="boxPark.html" class="btn-nav">BOXPARK</a>
-        <a href="packs.html" class="btn-nav">SERVICES</a>
-        <a href="about.html" class="btn-nav">ABOUT US</a>
-        <a href="contact.html" class="btn-nav">CONTACT</a>
-      </nav>
+      <!-- Manu -->
+      <header class="header-nav">
+        <div class="nav-logo"><a href="index.html"><img class="img-nav" src="img/logo-transparent.png"></a></div>
+        <nav class="nav">
+            <a href="index.html" class="btn-nav">HOME</a>
+            <a href="boxPark.html" class="btn-nav">BOXPARK</a>
+            <a href="packs.html" class="btn-nav">SERVICES</a>
+            <a href="about.html" class="btn-nav">ABOUT US</a>
+            <a href="contact.html" class="btn-nav">CONTACT</a>
+        </nav>
     </header>
+
     <nav class="secundary-nav" role="navigation">
-      <div id="menuToggle">
-        <input type="checkbox" />
-          <span></span>
-          <span></span>
-          <span></span>
-          <ul id="menu">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="boxPark.html">BOXPARK</a></li>
-            <li><a href="packs.html">SERVICES</a></li>
-            <li><a href="about.html">ABOUT US</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-          </ul>
-     </div>
+        <div id="menuToggle">
+          <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul id="menu">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="boxPark.html">BOXPARK</a></li>
+                <li><a href="packs.html">SERVICES</a></li>
+                <li><a href="about.html">ABOUT US</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+       </div>
     </nav>
+
     <!--JAVI BELOW-->
     <!--Header of boxpark-->
     <div class="header-boxpark-container img-boxpark-header">
