--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
       <!-- Manu -->
         <header class="header-nav">
-            <div class="nav-logo"><img class="img-nav" src="img/logo-transparent.png"></div>
+            <div class="nav-logo"><a href="index.html"><img class="img-nav" src="img/logo-transparent.png"></a></div>
             <nav class="nav">
                 <a href="index.html" class="btn-nav">HOME</a>
                 <a href="boxPark.html" class="btn-nav">BOXPARK</a>
