javier changed the color of  footer links

--- a/footer.html
+++ b/footer.html
@@ -8,10 +8,10 @@
                 <h3 class="title-footer-section">Quick Links</h3>
             </div>
             <div class="footer-box">
-                <div class="right-article-item" id="footer-links"><a href="contact.html" style="text-decoration: none;">Contact us</a></div>
-                <div class="right-article-item" id="footer-links"><a href="boxPark.html" style="text-decoration: none;">Discover Boxmad</a></div>
-                <div class="right-article-item" id="footer-links"><a href="#"></a>About us</div>
-                <div class="right-article-item" id="footer-links"><a href="#"></a>Events</div>
+                <a href="contact.html"><div class="right-article-item" id="footer-links">Contact us</div></a>
+                <a href="boxPark.html"><div class="right-article-item" id="footer-links">Discover Boxmad</div></a>
+                <a href="about.html"><div class="right-article-item" id="footer-links">About us</div></a>
+                <a href="packs.html"><div class="right-article-item" id="footer-links">Services</div></a>
             </div>
         </div>
 
@@ -25,7 +25,7 @@
                 <p>123 456 789</p>
             </div>
             <div class="right-article-item">
-                <i class="fa fa-envelope" aria-hidden="true"></i><p>boxpark@Madbox.com</p>
+                <i class="fa fa-envelope" aria-hidden="true"></i><p>boxmad@boxmad.com</p>
             </div>
             <div class="right-article-item">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
