--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="nav-logo"><a href="index.html"><img class="img-nav" src="img/logo-transparent.png"></a></div>
             <nav class="nav">
                 <a href="index.html" class="btn-nav">HOME</a>
-                <a href="boxPark.html" class="btn-nav">BOXPARK</a>
+                <a href="boxPark.html" class="btn-nav">BOXMAD</a>
                 <a href="packs.html" class="btn-nav">SERVICES</a>
                 <a href="about.html" class="btn-nav">ABOUT US</a>
                 <a href="contact.html" class="btn-nav">CONTACT</a>
@@ -48,7 +48,7 @@
                 <span></span>
                 <ul id="menu">
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="boxPark.html">BOXPARK</a></li>
+                    <li><a href="boxPark.html">BOXMAD</a></li>
                     <li><a href="packs.html">SERVICES</a></li>
                     <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
@@ -70,7 +70,7 @@
             <div class="container-box-img">
                 <div class="box">
                     <h2 class="heading-main">Our Place</h2>
-                    <h2 class="heading-secondary">BoxPark</h2>
+                    <h2 class="heading-secondary">Boxmad</h2>
                     <p>Know about the facilities of our multi-adventure center</p>
                     <a href="boxPark.html"><button type="button" class="btn  btn-outline-info btn-box">More Info</button></a>
                     
@@ -94,7 +94,7 @@
             <div class="container-box-img">
                 <div class="box">
                     <h2 class="heading-main">About Us</h2>
-                    <h2 class="heading-secondary">BoxMad</h2>
+                    <h2 class="heading-secondary">Boxmad</h2>
                     <p>Enter to discover our history</p>
                     <a href="about.html"><button type="button" class="btn btn-outline-info btn-box">More Info</button></a>
                    
