--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         <div class="nav-logo"><a href="index.html"><img class="img-nav" src="img/logo-transparent.png"></a></div>
         <nav class="nav">
             <a href="index.html" class="btn-nav">HOME</a>
-            <a href="boxPark.html" class="btn-nav">BOXPARK</a>
+            <a href="boxPark.html" class="btn-nav">BOXMAD</a>
             <a href="packs.html" class="btn-nav">SERVICES</a>
             <a href="about.html" class="btn-nav">ABOUT US</a>
             <a href="contact.html" class="btn-nav">CONTACT</a>
